--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 theme: jekyll-theme-hacker
 title: Giuseppe Filippone Résumé
 description: Welcome to my résumé
+relative_permalinks: false
+
 sass:
   style: compact
   sass_dir: assets/css/
